<?xml version="1.0" encoding="utf-8"?>

    <!-- Mappen och filen skapad av: Weronika Sleboda -->
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_action"
        android:title="@string/menu_action"
        android:icon="@drawable/menu_icon"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/heart_action"
        android:title="@string/heart_action"
        android:icon="@drawable/heart_icon"
        android:orderInCategory="2"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/home_action"
        android:title="@string/home_action"
        android:icon="@drawable/house_icon"
        android:orderInCategory="3"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/details_action"
        android:title="@string/details_action"
        android:icon="@drawable/view_details_icon"
        android:orderInCategory="4"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/profile_action"
        android:title="@string/profile_action"
        android:icon="@drawable/profile_icon"
        android:orderInCategory="5"
        app:showAsAction="ifRoom"/>
</menu>